<resources>
    <string name="app_name">IARC</string>
    <string name="Address">Please input your account</string>
    <string name="Pwd">please input password</string>
    <string name="Remember_pwd">记住密码</string>
    <string name="Auto_login">自动登入</string>
    <string name="Login">登陆</string>
    <string name="from">发件人:</string>
    <string name="subject">主题:</string>
    <string name="content">正文：</string>
</resources>
