<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    tools:context="cn.edu.swufe.MailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mail_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="3"
            android:text="@string/from"
            android:textSize="15sp" />

        <TextView
                android:id="@+id/mail_from_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mail_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="3"
            android:text="@string/subject"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/mail_subject_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:id="@+id/mail_content"
        android:layout_width="wrap_content"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:text="@string/content" />

    <!--<TextView-->
        <!--android:id="@+id/mail_content_info"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:scrollbars="vertical"/>-->

    <WebView
        android:id="@+id/mail_content_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
